Added some text about the game

--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
- <body bgcolor="pink" text="brown">
+<style>
+h1 {
+  animation: blinker 1s step-start infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+</style> 
+<body bgcolor="pink" text="brown">
    <center>
-     <h1>CONGRATULATIONS!</h1>
+     <h1>
+       CONGRATULATIONS!
+     </h1>
      <h2> You have been selected to compete 
        in our newest reality dating competition show</h2>
+     <br>
+     <p> To win, you must be complete a series of challenges meant to pair you with your ideal romantic partner. 
+       Two singles will be elminated at the end of each challenge  </p>
    </center>
-
+<dialog> Erica, 21, from Los, Angeles </dialog> 
+ 
 
  </body>
